--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group = 'fr.astrastudios.luckyblock'
-version = '1.0-SNAPSHOT'
+version = '1.0-Release'
 
 repositories {
     mavenCentral()
